0.7.0
Fixed cairo surfaces not being created/resized properly.
Fixed minor update glitch.
Ignore lines beginning with '#' when using LFSTK_loadVarsFromFile from prefs class.
Changes to structures, you must recompile all.

0.6.1
Added simple optional auto help options to LFSTK_argsToPrefs ( -? and -h ).
Added LFSTK_argsToPrefs to prefs class.
Added LFSTK_moveResizeWindow to lib.
Fix window tile cario surface getting occasional wrong size.
Added extra positioning for window context window.
Updated Window example.
Added context window to LFSTK_windowClass.
Fixed updating list when dragging scroll button.
Fixed file dialog example.
Now runs mouse exit from list gadget.
Setting LFSTK_setNameFilter in LFSTKFileDialog now works.
Added some extras functions to LFSTK_UtilityClass.
Vairous build files tweaks.
Added mouse enter/exit call backs to image class.
Fixed cairo surface sizes.
Gadget and window tile fixes.
Fixes to find class.
Minor tweaks to LFSTKFindClass.
Fixed file/folder dialogs.
Fixed deleting a gadget on the fly.
Minor code clean.
Fixed expander example.
Fixed expanding runexamples dialog.
Set example lfsabout to dialog window type.
Set lfsfontdialog class to dialog window type.
Improvements to expander gadget.
Various dialog tweaks.
Ignore spurious scroll events in list class.
Fixed setting scrollbar inactive.
LFSTK_oneLiner and LFSTK_runAndGet now handle std::strings in the arg list ( '%S' ).
Added parsing group names in desktop file.
Added simple .desktop parser to utils class.
Added optiona x/y offsets for gadget context menu.
Fixed alpha for multiline class.
Moved function LFSTK_hashFromKey to util class and made static.
Removed redundant functions from prefs class.
Removed old 'c' code from save/load prefsfile.
Added LFSTK_strReplaceAllStr to util class.
Added LFSTK_strReplaceAllChar to util class.
Mose code cleaning...
Set default whitespace for LFSTK_strStrip.
Renoved some leaky glib code.
Updated LFSTK_strStrip whitespace to include \n & \r.